--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "echarts": "^4.6.0",
     "element-ui": "^2.12.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
