--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "start": "vue-cli-service serve --mode dev",
+    "prop": "vue-cli-service build",
     "test": "vue-cli-service build --mode test",
-    "pre": "vue-cli-service build --mode pre",
-    "prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
