--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "prop": "vue-cli-service build",
+    "prod": "vue-cli-service build",
     "test": "vue-cli-service build --mode test",
     "lint": "vue-cli-service lint"
   },
